--- a/style.css
+++ b/style.css
@@ -5,6 +5,37 @@
     box-sizing: border-box;
 }
 
+.anchor {
+    float: left;
+    padding-right: 4px;
+    margin-left: -20px;
+}
+
+.skip-to-main-content-link {
+    position: absolute;
+    left: -9999px;
+    z-index: 999;
+    padding: 1em;
+    background-color: black;
+    color: white;
+    opacity: 0;
+}
+
+.skip-to-main-content-link:focus {
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 1;
+}
+
+h2 .anchor svg {
+    visibility: hidden;
+}
+
+h2:hover .anchor svg {
+    visibility: visible;
+}
+
+
 .summary p {
     margin-bottom: 10px;
 }
@@ -64,7 +95,7 @@ header a {
 
 section {
     margin: 15px 0;
-    padding: 15px;
+    padding: 15px 25px;
     background: #fff;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -123,7 +154,7 @@ ul li {
     }
 
     section {
-        padding: 20px;
+        padding: 20px 30px;
     }
 
     section h2 {
